--- a/README.mkd
+++ b/README.mkd
@@ -20,7 +20,7 @@ Follows a random source code, with the cursor marked as '§':
     def func():
        print('§')
 
-Then, after the ':deedee' command:
+Then, after the ':Deedee' command:
 
 
     def func():
@@ -35,9 +35,9 @@ Size of the tag to generate.
 
     let g:DeedeeMode = 'a' # (all) or 'b' (current buffer) or 'n' (none)
 
-`a` is for *All*: the tag will not match with any line in all opened buffers
-`b` is for *Buffer*: the tag will not match with any line in current buffer
-`n` is for *None*: No verification of doublons
+`a` is for *All*: the tag will not match with any line in all opened buffers  
+`b` is for *Buffer*: the tag will not match with any line in current buffer  
+`n` is for *None*: No verification of doublons  
 
     let g:DeedeeAlphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
 
